# NexusVoice

./: .gitignore  AudioDevice.py  NexusClient.py  NexusVoice.py  README.md  TODO.md  ai_agents.py  analyze_samples.py  audio_utils.py  config.py  config.yml  init.py  pyproject.toml  record_samples.py  requirements-dev.txt  requirements.txt  test.py  test_playback.py  test_playback2.py
ai/: AudioInferenceEngine.py  InferenceEngine.py  TTSInferenceEngine.py
audio/: AudioDevice.py  utils.py
config/: config.yaml
examples/: analyze_samples.py  calibrate_delay.py  optimize_chunk_size.py  optimize_chunk_size_generational.py  optimize_delay.py  record_samples.py  test_AudioDevice.py  test_cancellation.py  test_speech.py
models/: my_nexus-3.onnx  nexus.yml  stop.yml
nexus/alexa/: utterances.txt
nexus/alexa/slots/: FLOOR_NAME  LIGHT_DIRECTION  LIGHT_LEVEL_DIRECTION  LIGHT_NAME  ORDINAL_POSITION  ROOM_NAME  SHADE_DIRECTION  SHADE_LEVEL_DIRECTION  SHADE_NAME
nexusvoice/: __init__.py  bootstrap.py
nexusvoice/ai/: AudioInferenceEngine.py  ConversationalAgent.py  HomeAutomationAgent.py  InferenceEngine.py  LocalClassifierAgent.py  LocalHomeAutomationAgent.py  LocalModel.py  TTSInferenceEngine.py  agents.py  pydantic_agent.py  types.py
nexusvoice/ai/classifier/: base_types.py  dsl.py  generate_training_data.py  intent_labels.py  slots.py  utterance.py
nexusvoice/audio/: AudioDevice.py  __init__.py  audio_device.py  mixer.py  music.py  utils.py
nexusvoice/client/: NexusClient.py  RecordingState.py  RuntimeContextManager.py  __init__.py  announcer.py  client.py  client_server.py  commands.py  discord_bot.py  main.py  main_announcer.py  main_client_server.py  main_discord_bot.py  main_standalone.py  online.py  repl_client.py  standalone.py  voice_client.py
nexusvoice/core/: README.md  __init__.py  api.py  config.py  pyproject.toml  test_tools.py
nexusvoice/core/api/: __init__.py  base.py  local.py  online.py  pydantic_mcp.py  server.py  tool_registry.py
nexusvoice/core/protocol/: __init__.py  connection.py  types.py
nexusvoice/core/utils/: __init__.py  eventbus.py
nexusvoice/db/: interaction_log.py
nexusvoice/internal/api/: base.py  online.py  pydantic_mcp.py
nexusvoice/models/: my_nexus-3.tflite  nexus_v4.onnx  scarlette.onnx  scarlette.tflite  stop.onnx
nexusvoice/protocol/: mcp.py
nexusvoice/server/: NexusServer.py  __init__.py  connection.py  main.py  registry.py  test_client.py  types.py
nexusvoice/server/servivces/: event_scheduler.py  lutron_homeworks.py
nexusvoice/server/tasks/: ai_agent.py  base.py  exhaust_fan_monitor.py  lutron_homeworks.py  lutron_test.py  sample_task.py  scheduler.py
nexusvoice/tools/: weather.py
nexusvoice/tools/lutron/: lutron.py  server.py  types.py
nexusvoice/tools/lutron/commands/: __init__.py  area.py  base.py  output.py  shadegroup.py  system.py
nexusvoice/tools/lutron/database/: database.py  view.py
nexusvoice/tools/mcp_client/: client.py
nexusvoice/utils/: RuntimeContextManager.py  arrays.py  bytes.py  debug.py  eventbus.py  logging.py  state.py
scripts/: test_lutron_telnet.py  type_adapter.py
scripts/ai/: home_automation_timing.py
scripts/classifier/: test_classifier.py  train_classifier.py
tests/: __init__.py  conftest.py  test_classifier.py  test_pydantic_agent.py
tests/ai/: test_classifier_model.py  test_conversational_agent.py  test_fast_classifier_agent.py  test_home_automation_agent.py  test_home_automation_model.py  test_intent_classifier_model.py  test_local_classifier_agent.py  test_nexus_api.py  test_pydantic_agent.py
tests/ai/classifier/: test_dsl.py
tests/api/: test_modelresponse.py
tests/client/: test_runtime_context_manager.py
tests/core/: test_nexus_config.py
tests/logfire/: test_logfire.py
tests/tools/: test_lutron_command.py  test_output_command.py  test_system_command.py
tests/tools/lutron/: DbXmlInfo.xml  test_lutron.py  test_lutron_command.py  test_lutron_database.py  test_lutron_database_view.py  test_output_command.py  test_system_command.py
tests/utils/: test_EventBus.py  test_rate_limiter.py  test_runtime_context_manager.py  test_statemachine.py
utils/: arrays.py  bytes.py  debug.py  logging.py
