[project]
name = "nexusvoice"
version = "0.1.0"
description = "NexusVoice Application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.6.0",
    "aioconsole>=0.8.1",
    "datasets==3.5.0",
    "numpy~=2.2",
    "kokoro>=0.9.4",
    "pyaudio~=0.2",
    "openai~=1.65",
    "omegaconf>=2.3",
    "openwakeword==0.6.0",
    "pydub~=0.25",
    "pydantic>=2.11.2",
    "pydantic-ai>=0.2.11",
    "requests>=2.32.3",
    "setuptools",
    "silero==0.4.1",
    "silero-vad==5.1.2",
    "torch>=2.6",
    "transformers~=4.49",
    "webrtcvad~=2.0",
    "speexdsp-ns @ https://github.com/madsmith/speexdsp-python/releases/download/0.1.2/speexdsp_ns-0.1.2-cp312-cp312-macosx_15_0_arm64.whl",
    "logfire[httpx,requests]>=3.17.0",
    "fastmcp>=2.9.2",
    "opentelemetry-instrumentation-requests>=0.54b1",
]

[project.scripts]
nexus-client = "nexusvoice.client.main:main"
nexus-server = "nexusvoice.server.main:main"
nexus-test-client = "nexusvoice.server.test_client:main"

[project.optional-dependencies]
dev = [
    "matplotlib>=3.10",
    "scikit-learn>=1.4.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
log_cli = true
log_cli_level = "DEBUG"

[tool.setuptools]
packages = { find = { include = ["nexusvoice*"] } }
