[project]
name = "nexusvoice"
version = "0.3.0"
description = "NexusVoice Application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.6.0",
    "anyio>=4.9.0",
    "datasets==3.5.0",
    "fastmcp>=2.9.2",
    "kokoro>=0.9.4",
    "logfire[httpx,requests]>=4.0.0",
    "lutron-homeworks @ git+https://github.com/madsmith/lutron-homeworks.git@v0.4.2",
    "numpy~=2.2",
    "omegaconf>=2.3",
    "openai~=1.65",
    "opentelemetry-instrumentation-requests>=0.54b1",
    "openwakeword==0.6.0",
    "prompt-toolkit>=3.0.51",
    "pyaudio~=0.2",
    "pydantic-ai>=0.4.9",
    "pydantic>=2.11.2",
    "pydub~=0.25",
    "requests>=2.32.3",
    "setuptools",
    "silero-vad==5.1.2",
    "silero==0.4.1",
    "speexdsp-ns @ https://github.com/madsmith/speexdsp-python/releases/download/0.1.2/speexdsp_ns-0.1.2-cp312-cp312-macosx_15_0_arm64.whl",
    "torch>=2.6",
    "transformers~=4.49",
    "webrtcvad~=2.0",
]

[project.scripts]
nexus-client-standalone = "nexusvoice.client.main_standalone:main"
nexus-client = "nexusvoice.client.main_client_server:main"
nexus-server = "nexusvoice.server.main:main"
nexus-test-client = "nexusvoice.server.test_client:main"

[project.optional-dependencies]
dev = [
    "matplotlib>=3.10",
    "scikit-learn>=1.4.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
log_cli = true
log_cli_level = "DEBUG"

[tool.setuptools]
packages = { find = { include = ["nexusvoice*"] } }
