[project]
name = "nexusvoice-core"
version = "0.6.3"
description = "Core components from NexusVoice that can be used independently"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "logfire>=4.0.0",
    "omegaconf>=2.3",
    "pydantic>=2.11.7",
    # Add any other dependencies that nexusvoice.core needs here
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "../.."}  # Look two directories up from nexusvoice/core
packages = { find = { where = ["../.."], include = ["nexusvoice.core*"] } }

[tool.setuptools.package-data]
"nexusvoice.core" = ["*.md"]
